<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="mainViewModel"
            type="com.eshc.dolhareubab.ui.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_share_title"
            style="@style/Text.Heading24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_size_16"
            android:layout_marginTop="@dimen/margin_size_10"
            android:text="@string/food_title"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_address"
            style="@style/Text.Body14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_size_8"
            android:text="@{@string/current_address(mainViewModel.address)}"
            app:layout_constraintStart_toStartOf="@id/tv_share_title"
            app:layout_constraintTop_toBottomOf="@id/tv_share_title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_notice"
            style="@style/Text.Body14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_size_8"
            android:text="@string/food_notice"
            app:layout_constraintStart_toStartOf="@id/tv_address"
            app:layout_constraintTop_toBottomOf="@id/tv_address" />

        <RadioGroup
            android:id="@+id/rg_food"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_notice"
            android:layout_marginTop="@dimen/margin_size_16"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_lately"
                android:layout_width="@dimen/image_size_120"
                android:layout_height="@dimen/button_size_30"
                android:background="@drawable/selector_radio_button"
                android:button="@null"
                android:checked="true"
                android:layout_marginHorizontal="@dimen/margin_size_8"
                android:text="@string/sort_lately"
                android:textAlignment="center"
                android:textColor="@drawable/selector_radio_text" />

            <RadioButton
                android:id="@+id/rb_distance"
                android:layout_width="@dimen/image_size_120"
                android:layout_height="@dimen/button_size_30"
                android:background="@drawable/selector_radio_button"
                android:layout_marginHorizontal="@dimen/margin_size_8"
                android:button="@null"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/sort_distance"
                android:textAlignment="center"
                android:textColor="@drawable/selector_radio_text" />

            <RadioButton
                android:id="@+id/rb_expire"
                android:layout_width="@dimen/image_size_120"
                android:layout_height="@dimen/button_size_30"
                android:background="@drawable/selector_radio_button"
                android:layout_marginHorizontal="@dimen/margin_size_8"
                android:button="@null"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:text="@string/sort_expire"
                android:textAlignment="center"
                android:textColor="@drawable/selector_radio_text" />
        </RadioGroup>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_food"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:paddingHorizontal="@dimen/margin_size_24"
            android:paddingVertical="@dimen/margin_size_8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rg_food" />

        <ProgressBar
            android:id="@+id/pb_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:progressTint="@color/yellow_500"
            app:layout_constraintTop_toBottomOf="@id/rg_food"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>